--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <!-- <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
       </div>
     </div>
   </nav>
-
+ -->
   <!-- Header -->
   <header class="masthead"  img>
     <div class="container d-flex h-100 align-items-center">
@@ -49,16 +49,16 @@
         <h1 class="mx-auto my-0 text-uppercase"></h1>
 
   <!--buttons-->     
-        <a href="https://airbnb.com/h/beallscottage" class="btn btn-primary js-scroll-trigger">Book</a>
+        <a href="https://airbnb.com/h/beallscottage" class="btn btn-primary js-scroll-trigger">Book via Airbnb</a>
+        <a href="https://www.homeaway.com/vacation-rental/p4761273"  class="btn btn-primary js-scroll-trigger">Book via HomeAway</a>
         <a href="#about"  class="btn btn-primary js-scroll-trigger">Pictures</a>
-        <a href="#about"  class="btn btn-primary js-scroll-trigger">Things to do</a>
-         <a href="#about"  class="btn btn-primary js-scroll-trigger">Directions</a>  
+         <!-- <a href="#about"  class="btn btn-primary js-scroll-trigger">Things to do</a>  --> 
         </div>
       </div>
     </div>
   </header>
   <!-- Signup Section -->
-  <section id="signup" class="signup-section">
+  <!-- <section id="signup" class="signup-section">
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -73,32 +73,32 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 
   <!-- Contact Section -->
   <section class="contact-section bg-black">  
 \\
-      <div class="row">
+      <div class="row-contact-card">
 
         <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
+          <div class="card-contact py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Address</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">Old Coast Highway, Fort Bragg CA</div>
+              <h4 class="title-contact-card">Address</h4>
+              <hr class="contact-card-separator">
+              <div class="text-contact-card">Old Coast Highway, Fort Bragg CA</div>
             </div>
           </div>
         </div>
 
         <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
+          <div class="card-contact py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Email</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">
+              <h4 class="title-contact-card">Email</h4>
+              <hr class="contact-card-separator">
+              <div class="text-contact-card">
                 <a href="#">info@beallscottage.com</a>
               </div>
             </div>
@@ -106,26 +106,26 @@
         </div>
 
         <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
+          <div class="card-contact py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Phone</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <h4 class="title-contact-card">Phone</h4>
+              <hr class="contact-card-separator">
+              <div class="text-contact-card">+1 (555) 902-8832</div>
             </div>
           </div>
         </div>
       </div>
 
       <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
+        <a href="https://twitter.com/beallscottage" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://www.facebook.com/beallscottage" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
+        <a href="https://www.instagram.com/beallscottage" class="mx-2">
+          <i class="fab fa-instagram"></i>
         </a>
       </div>
 
@@ -135,7 +135,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; Beall's Cottage 2019
     </div>
   </footer>
 
